# SimpleSchemaGenerator

./: .copier-answers.yml  .gitignore  ActivateEpilog.py  BootstrapEpilog.py  Build.py  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  SECURITY.md  minisign_key.pub  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: CICD.yml  CICD_impl.yml  codeql.yml  standard.yaml  standard.yml
src/: AutoGitSemVer.yaml  BuildBinary.py
src/SimpleSchemaGenerator/: EntryPoint.py  Errors.py  __init__.py
src/SimpleSchemaGenerator/Common/: Error.py  ExecuteInParallel.py  Location.py  Range.py  Region.py
src/SimpleSchemaGenerator/SampleSchemas/: Cardinality.SimpleSchema  Empty.SimpleSchema  Expressions.SimpleSchema  Extensions.SimpleSchema  Import.SimpleSchema  Miscellaneous.SimpleSchema  Structures.SimpleSchema  Tabs.SimpleSchema  Tuples.SimpleSchema  Variants.SimpleSchema
src/SimpleSchemaGenerator/Schema/Common/: Cardinality.py  Element.py  Metadata.py  TerminalElement.py
src/SimpleSchemaGenerator/Schema/Elements/Common/: Cardinality.py  Element.py  Metadata.py  TerminalElement.py  UniqueNameTrait.py  Visibility.py
src/SimpleSchemaGenerator/Schema/Elements/Expressions/: BooleanExpression.py  Expression.py  IntegerExpression.py  ListExpression.py  NoneExpression.py  NumberExpression.py  StringExpression.py  TupleExpression.py
src/SimpleSchemaGenerator/Schema/Elements/Statements/: ExtensionStatement.py  ItemStatement.py  RootStatement.py  Statement.py  StructureStatement.py
src/SimpleSchemaGenerator/Schema/Elements/Types/: FundamentalTypes.py  Type.py
src/SimpleSchemaGenerator/Schema/Elements/Types/Impl/: CreateTypeFromPythonAnnotation.py  TypeImpl.py
src/SimpleSchemaGenerator/Schema/Elements/Types/TypeDefinitions/: BooleanTypeDefinition.py  DateTimeTypeDefinition.py  DateTypeDefinition.py  DirectoryTypeDefinition.py  DurationTypeDefinition.py  EnumTypeDefinition.py  FilenameTypeDefinition.py  GuidTypeDefinition.py  IntegerTypeDefinition.py  NumberTypeDefinition.py  StringTypeDefinition.py  StructureTypeDefinition.py  TimeTypeDefinition.py  TupleTypeDefinition.py  TypeDefinition.py  UriTypeDefinition.py  VariantTypeDefinition.py
src/SimpleSchemaGenerator/Schema/Parse/: __init__.py
src/SimpleSchemaGenerator/Schema/Parse/ANTLR/: Parse.py
src/SimpleSchemaGenerator/Schema/Parse/ANTLR/GeneratedCode/: SimpleSchema.interp  SimpleSchema.tokens  SimpleSchemaLexer.interp  SimpleSchemaLexer.py  SimpleSchemaLexer.tokens  SimpleSchemaParser.py  SimpleSchemaVisitor.py
src/SimpleSchemaGenerator/Schema/Parse/ANTLR/Grammar/: Build.py  SimpleSchema.g4
src/SimpleSchemaGenerator/Schema/Parse/ANTLR/Grammar/Elements/Common/: ParseIdentifier.py
src/SimpleSchemaGenerator/Schema/Parse/ANTLR/Grammar/Elements/Statements/: ParseIncludeStatement.py  ParseItemStatement.py  ParseStructureStatement.py
src/SimpleSchemaGenerator/Schema/Parse/ANTLR/Grammar/Elements/Types/: ParseIdentifierType.py  ParseTupleType.py  ParseType.py  ParseVariantType.py
src/SimpleSchemaGenerator/Schema/Parse/TypeResolver/: Common.py  Resolve.py
src/SimpleSchemaGenerator/Schema/Parse/TypeResolver/Impl/: Namespace.py  TypeFactories.py
src/SimpleSchemaGenerator/Schema/Visitors/: ElementVisitor.py  TestHelperVisitor.py
tests/: EntryPoint_UnitTest.py  Errors_UnitTest.py  Math_UnitTest.py
tests/Common/: Error_UnitTest.py  ExecuteInParallel_UnitTest.py  Location_UnitTest.py  Range_UnitTest.py  Region_UnitTest.py
tests/Schema/: TestHelpers.py
tests/Schema/Common/: Cardinality_UnitTest.py  Element_UnitTest.py  Metadata_UnitTest.py  TerminalElement_UnitTest.py
tests/Schema/Elements/Common/: Cardinality_UnitTest.py  Element_UnitTest.py  Metadata_UnitTest.py  TerminalElement_UnitTest.py  UniqueNameTrait_UnitTest.py  Visibility_UnitTest.py
tests/Schema/Elements/Expressions/: BooleanExpression_UnitTest.py  Expression_UnitTest.py  IntegerExpression_UnitTest.py  ListExpression_UnitTest.py  NoneExpression_UnitTest.py  NumberExpression_UnitTest.py  StringExpression_UnitTest.py  TupleExpression_UnitTest.py
tests/Schema/Elements/Statements/: ExtensionStatement_UnitTest.py  ItemStatement_UnitTest.py  RootStatement_UnitTest.py  Statement_UnitTest.py  StructureStatement_UnitTest.py
tests/Schema/Elements/Types/: FundamentalTypes_UnitTest.py  Type_UnitTest.py
tests/Schema/Elements/Types/TypeDefinitions/: BooleanTypeDefinition_UnitTest.py  DateTimeTypeDefinition_UnitTest.py  DateTypeDefinition_UnitTest.py  DirectoryTypeDefinition_UnitTest.py  DurationTypeDefinition_UnitTest.py  EnumTypeDefinition_UnitTest.py  FilenameTypeDefinition_UnitTest.py  GuidTypeDefinition_UnitTest.py  IntegerTypeDefinition_UnitTest.py  NumberTypeDefinition_UnitTest.py  StringTypeDefinition_UnitTest.py  StructureTypeDefinition_UnitTest.py  TimeTypeDefinition_UnitTest.py  TupleTypeDefinition_UnitTest.py  TypeDefinition_UnitTest.py  UriTypeDefinition_UnitTest.py  VariantTypeDefinition_UnitTest.py
tests/Schema/Parse/ANTLR/: Parse_UnitTest.py
tests/Schema/Parse/ANTLR/Grammar/Elements/Common/: ParseIdentifier_UnitTest.py
tests/Schema/Parse/ANTLR/Grammar/Elements/Statements/: ParseIncludeStatement_UnitTest.py  ParseItemStatement_UnitTest.py  ParseStructureStatement_UnitTest.py
tests/Schema/Parse/ANTLR/Grammar/Elements/Types/: ParseIdentifierType_UnitTest.py  ParseTupleType_UnitTest.py  ParseType_UnitTest.py  ParseVariantType_UnitTest.py
tests/Schema/Parse/ANTLR/__snapshots__/: Parse_UnitTest.ambr
tests/Schema/Parse/TypeResolver/: Common_UnitTest.py  Resolve_UnitTest.py
tests/Schema/Parse/TypeResolver/__snapshots__/: Resolve_UnitTest.ambr
tests/Schema/Visitors/: ElementVisitor_UnitTest.py  TestHelperVisitor_UnitTest.py
